--- a/index.css
+++ b/index.css
@@ -4,10 +4,11 @@ body {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-weight: bold;
     text-align: center;
-}
-
-img {
-    width:50%;
+    @media only screen and (max-width: 480px) {
+        img {
+            width:100%;
+        }
+    }
 }
 
 h1 {
