--- a/index.css
+++ b/index.css
@@ -1,19 +1,21 @@
-body {
-    background-image: url(station2.jpg);
-    background-size: cover;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-weight: bold;
-    text-align: center;
-    @media only screen and (max-width: 480px) {
-        img {
-            width:100%;
-        }
+@media only screen and (max-width: 480px) {
+    img {
+        max-width: 100%;
+        width: 500px;
     }
 }
 
 h1 {
     margin-top: 40px;
     margin-bottom: 10px;
+}
+
+body {
+    background-image: url(station2.jpg);
+    background-size: cover;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-weight: bold;
+    text-align: center;
 }
 
 h2 {
