--- a/index.css
+++ b/index.css
@@ -2,6 +2,8 @@
     img {
         max-width: 100%;
         width: 500px;
+        object-fit: cover;
+        object-position: bottom;
     }
 }
 
