--- a/index.css
+++ b/index.css
@@ -1,7 +1,7 @@
 @media only screen and (max-width: 480px) {
     img {
-        max-width: 100%;
-        width: 500px;
+        width: 100%;
+        height: 300px;
         object-fit: cover;
         object-position: bottom;
     }
