--- a/index.css
+++ b/index.css
@@ -1,23 +1,20 @@
-@media only screen and (max-width: 480px) {
-    img {
-        width: 100%;
-        height: 300px;
-        object-fit: cover;
-        object-position: bottom;
-    }
-}
-
-h1 {
-    margin-top: 40px;
-    margin-bottom: 10px;
-}
-
 body {
-    background-image: url(station2.jpg);
-    background-size: cover;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-weight: bold;
     text-align: center;
+}
+ .background {
+    background-image: url(station2.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    height: 100vh;
+    margin: 0px;
+    padding: 0px;
+ }
+ 
+h1 {
+    margin-top: 40px;
+    margin-bottom: 10px;
 }
 
 h2 {
