--- a/index.css
+++ b/index.css
@@ -4,7 +4,7 @@ body {
     text-align: center;
 }
  .background {
-    background-image: url(station2.jpg);
+    background-image: url("station2.jpg");
     background-size: cover;
     background-repeat: no-repeat;
  }
