--- a/index.css
+++ b/index.css
@@ -2,7 +2,7 @@ body {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-weight: bold;
     text-align: center;
-    background-image: url("station2.jpg");
+    background-image: url(station2.jpg);
     background-size: cover;
     background-repeat: no-repeat;
 }
