--- a/index.css
+++ b/index.css
@@ -3,7 +3,7 @@ body {
     font-weight: bold;
     text-align: center;
     background-image: url(station2.jpg);
-    background-size: cover;
+    background-size: contain;
     background-repeat: no-repeat;
 }
 
