--- a/index.css
+++ b/index.css
@@ -5,6 +5,7 @@ body {
     background-image: url(station2.jpg);
     background-size: cover;
     background-repeat: no-repeat;
+    background-position: center;
 }
 
 h1 {
